<resources>
    <string name="app_name">Calculadora</string>
    <string name="calc_hint_input">Introduce tu transaccion</string>
    <string name="calc_btn_seven">7</string>
    <string name="calc_btn_point">.</string>
    <string name="calc_btn_one">1</string>
    <string name="calc_btn_four">4</string>
    <string name="calc_btn_eight">8</string>
    <string name="calc_btn_five">5</string>
    <string name="calc_btn_two">2</string>
    <string name="calc_btn_zero">0</string>
    <string name="calc_btn_nine">9</string>
    <string name="calc_btn_clear">C</string>
    <string name="calc_btn_six">6</string>
    <string name="calc_btn_between">÷</string>
    <string name="calc_btn_multi">x</string>
    <string name="calc_btn_three">3</string>
    <string name="calc_btn_sub">-</string>
    <string name="calc_btn_sum">+</string>
    <string name="calc_btn_result">=</string>
    <string name="message_exp_incorrect">Expresion Incorrecta</string>
</resources>
