<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/calc_horizontal_margin"
    android:paddingRight="@dimen/calc_horizontal_margin"
    android:paddingTop="@dimen/calc_horizontal_margin"
    android:paddingBottom="@dimen/calc_horizontal_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_input_height"
            android:hint="@string/calc_hint_input"
            android:gravity="end|center_vertical"
            android:inputType="none"
            android:textIsSelectable="true"
            android:maxLength="16"
            android:drawablePadding="16dp"
            android:drawableEnd="@drawable/ic_backspace_black_36dp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llMainLeft"
        android:layout_width="@dimen/calc_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tilInput">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_seven"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnFour"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_four"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnOne"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_one"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnPoint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_point"
            android:theme="@style/ButtomMDDark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMainRigth"
        android:layout_width="@dimen/calc_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tilInput"
        android:layout_toEndOf="@id/llMainLeft">

        <Button
            android:id="@+id/btnEight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_eight"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_five"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_two"
            android:theme="@style/ButtomMD"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_zero"
            android:theme="@style/ButtomMD"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlOperators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilInput"
        android:layout_toEndOf="@id/llMainRigth">

        <Button
            android:id="@+id/btnNine"
            android:layout_width="@dimen/calc_btn_size"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_nine"
            android:theme="@style/ButtomMD"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_btn_size"
            android:text="@string/calc_btn_clear"
            android:theme="@style/ButtomMDDanger"
            android:layout_toEndOf="@id/btnNine"/>

        <LinearLayout
            android:id="@+id/llMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btnNine">

            <Button
                android:id="@+id/btnSix"
                android:layout_width="@dimen/calc_btn_size"
                android:layout_height="@dimen/calc_btn_size"
                android:text="@string/calc_btn_six"
                android:theme="@style/ButtomMD"/>
            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:layout_weight="50"
                android:text="@string/calc_btn_between"
                android:theme="@style/ButtomMDDark"/>
            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:layout_weight="50"
                android:text="@string/calc_btn_multi"
                android:theme="@style/ButtomMDDark"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/llMiddle">

            <Button
                android:id="@+id/btnThree"
                android:layout_width="@dimen/calc_btn_size"
                android:layout_height="@dimen/calc_btn_size"
                android:text="@string/calc_btn_three"
                android:theme="@style/ButtomMD"/>
            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:layout_weight="50"
                android:text="@string/calc_btn_sub"
                android:theme="@style/ButtomMDDark"/>
            <Button
                android:id="@+id/btnSum"
                android:layout_width="0dp"
                android:layout_height="@dimen/calc_btn_size"
                android:layout_weight="50"
                android:text="@string/calc_btn_sum"
                android:theme="@style/ButtomMDDark"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calc_btn_size"
        android:theme="@style/ButtomMDDarker"
        android:layout_below="@id/rlOperators"
        android:layout_toEndOf="@id/llMainRigth"
        android:text="@string/calc_btn_result"/>
</RelativeLayout>
